@@ -1,3 +1,8 @@
+(08/12/14)
+==========
+
+· Update Server > NGINX (latest compile) web server
+
 (06/12/14)
 ==========
 
